# proyecto_metereologia

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
analysis/: index.html
docs/: graficas.md  index.md
docs/visuals/: mapa_potencial_100m.html
graficas/: index.html
search/: search_index.json
src/weather/: utils.py
src/weather/data/: aep.py  load.py  quality.py  weibull.py
src/weather/pipelines/: aep.py  ingest.py  qc.py  visualize.py  weibull.py
src/weather/visualization/: maps.py  timeseries.py  wind_rose.py
tests/: test_aep.py  test_load.py  test_quality.py  test_utils.py  test_visualize.py  test_weibull.py
weather/: utils.py
