[project]
name = "proyecto_meteorologia"
version = "0.1.6"
description = "Análisis de datos meteorológicos — Big Data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Álvaro Inclán" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "requests>=2.31",
    "polars>=1.40.0",
    "cfgrib>=0.9",
    "xarray>=2024.1",
    "eccodes>=2.36",
    "scipy>=1.15.3",
    "pyarrow>=24.0.0",
    "ecmwflibs>=0.7.0",
    "plotly>=6.7.0",
    "folium>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "polars>=1.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  UP: pyupgrade
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line-too-long — handled by the formatter

[tool.ruff.format]
quote-style = "double"
